[gd_scene load_steps=11 format=3 uid="uid://ly3ifjds4qun"]

[ext_resource type="Script" uid="uid://cxap1x025hpxx" path="res://addons/parley/stores/stores_editor.gd" id="1_7ev3d"]
[ext_resource type="Texture2D" uid="uid://dowsayd8imiw2" path="res://addons/parley/assets/Character.svg" id="2_lsyok"]
[ext_resource type="Texture2D" uid="uid://cwpe018tuojmx" path="res://addons/parley/assets/Condition.svg" id="3_axuh1"]
[ext_resource type="Texture2D" uid="uid://batwytcx6oxfd" path="res://addons/parley/assets/Action.svg" id="4_0qi85"]
[ext_resource type="PackedScene" uid="uid://b282u3bhn7ncf" path="res://addons/parley/stores/character/character_store_editor.tscn" id="5_85s87"]
[ext_resource type="PackedScene" uid="uid://bhcdx3h8xtn5" path="res://addons/parley/stores/fact/fact_store_editor.tscn" id="6_07rcw"]
[ext_resource type="PackedScene" uid="uid://dil4p8wvfe0y3" path="res://addons/parley/stores/action/action_store_editor.tscn" id="7_mc0hd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lsyok"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_axuh1"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0qi85"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="StoresEditor" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_7ev3d")

[node name="StoresMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="StoresEditorContainer" type="VBoxContainer" parent="StoresMarginContainer"]
layout_mode = 2

[node name="StoresOptionHBoxContainer" type="HBoxContainer" parent="StoresMarginContainer/StoresEditorContainer"]
layout_mode = 2
alignment = 1

[node name="ShowCharacterStoreButton" type="Button" parent="StoresMarginContainer/StoresEditorContainer/StoresOptionHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_lsyok")
toggle_mode = true
button_pressed = true
text = "Character"
icon = ExtResource("2_lsyok")

[node name="ShowFactStoreButton" type="Button" parent="StoresMarginContainer/StoresEditorContainer/StoresOptionHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_axuh1")
toggle_mode = true
text = "Fact"
icon = ExtResource("3_axuh1")

[node name="ShowActionStoreButton" type="Button" parent="StoresMarginContainer/StoresEditorContainer/StoresOptionHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_0qi85")
toggle_mode = true
text = "Action"
icon = ExtResource("4_0qi85")

[node name="StoresContainer" type="VBoxContainer" parent="StoresMarginContainer/StoresEditorContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterStoreEditor" parent="StoresMarginContainer/StoresEditorContainer/StoresContainer" instance=ExtResource("5_85s87")]
unique_name_in_owner = true
layout_mode = 2

[node name="FactStoreEditor" parent="StoresMarginContainer/StoresEditorContainer/StoresContainer" instance=ExtResource("6_07rcw")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ActionStoreEditor" parent="StoresMarginContainer/StoresEditorContainer/StoresContainer" instance=ExtResource("7_mc0hd")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="toggled" from="StoresMarginContainer/StoresEditorContainer/StoresOptionHBoxContainer/ShowCharacterStoreButton" to="." method="_on_show_character_store_button_toggled"]
[connection signal="toggled" from="StoresMarginContainer/StoresEditorContainer/StoresOptionHBoxContainer/ShowFactStoreButton" to="." method="_on_show_fact_store_button_toggled"]
[connection signal="toggled" from="StoresMarginContainer/StoresEditorContainer/StoresOptionHBoxContainer/ShowActionStoreButton" to="." method="_on_show_action_store_button_toggled"]
